data/raw_logs/semantic/sem_void_assign.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_void_assign.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_void_assign.c:1:34: error: void value not ignored as it ought to be
    1 | void f() {} int main() { int x = f(); return 0; }
      |                                  ^
